Perfil Artista Terminado

--- a/bibliotecaMusicalPresentacion/src/main/java/Pantallas/FrmPerfilArtista.form
+++ b/bibliotecaMusicalPresentacion/src/main/java/Pantallas/FrmPerfilArtista.form
@@ -154,15 +154,15 @@
                                   <Component id="jblGenero" min="-2" pref="170" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jblNombresIntegrantes" alignment="0" min="-2" pref="252" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Group type="102" attributes="0">
                                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="btnMostrarTodosIntegrantes" min="-2" max="-2" attributes="0"/>
                                       </Group>
+                                      <Component id="cbcIntegrantes" pref="234" max="32767" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                                   <Component id="jblArtistaFavorito" min="-2" pref="41" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -187,10 +187,12 @@
                                               <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                                               <Component id="btnMostrarTodosIntegrantes" alignment="3" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jblNombresIntegrantes" min="-2" pref="33" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jblArtistaFavorito" min="-2" pref="41" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="3" attributes="0">
+                                          <Component id="jblArtistaFavorito" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                                          <Component id="cbcIntegrantes" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
                               </Group>
                               <Component id="jblImagenArtista" min="-2" pref="92" max="-2" attributes="0"/>
@@ -233,14 +235,6 @@
                     <Property name="text" type="java.lang.String" value="Integrantes"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jblNombresIntegrantes">
-                  <Properties>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="0" green="0" red="0" type="rgb"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="jLabel2"/>
-                  </Properties>
-                </Component>
                 <Component class="javax.swing.JLabel" name="jblGenero">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -276,6 +270,16 @@
                   <Events>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jblArtistaFavoritoMouseClicked"/>
                   </Events>
+                </Component>
+                <Component class="javax.swing.JComboBox" name="cbcIntegrantes">
+                  <Properties>
+                    <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                      <StringArray count="0"/>
+                    </Property>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
